--- a/projeto4-relatorios/src/view/TelaLogin.form
+++ b/projeto4-relatorios/src/view/TelaLogin.form
@@ -69,7 +69,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="textoLogin">
       <Properties>
-        <Property name="text" type="java.lang.String" value="bruno"/>
+        <Property name="text" type="java.lang.String" value="admin"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textoLoginActionPerformed"/>
@@ -82,7 +82,7 @@
     </Component>
     <Component class="javax.swing.JPasswordField" name="textoSenha">
       <Properties>
-        <Property name="text" type="java.lang.String" value="senha"/>
+        <Property name="text" type="java.lang.String" value="admin"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textoSenhaActionPerformed"/>
